--- a/docs/Part1 从零起步/小试牛刀.md
+++ b/docs/Part1 从零起步/小试牛刀.md
@@ -1,2 +1,56 @@
 # Trae上手
-看了那么多
+配置了那么多环境，看了那么多行代码，我们也该动动手啦~
+
+## 实例上手
+我想通过Trae帮我制作一个TODO的列表应用，帮我这个J人更好的安排每天的工作
+
+### 1，打开Trae，并输入我们的需求
+```
+创建一个 TODO 列表应用：
+- 用户可以输入任务并添加到列表。
+- 每个任务可以标记为已完成或未完成。
+- 用户可以删除任务。
+- 使用 React 作为前端框架，界面简洁，背景色为浅灰色。
+```
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.1.png)  
+
+### 2，Trae开始思考了！
+下面是Trae思考的过程：
+
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.2.png)  
+
+### 3，我们需要给我们的项目起一个响亮的名字~
+我们需要给我们的项目起一个名字！什么都可以~
+
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.3.png)  
+
+### 4，Trae开始开发了！
+我把我的项目名字叫做响当当的“111”，Trae收到之后开始在终端开始转圈圈，他开始开发了！
+
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.4.png)  
+
+### 5，Trae开发ing
+这里只要在终端没有报出红色的英文就说明运行稳定
+
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.5.png)  
+
+### 6，Trae可以看到开发过程
+在Trae不断地开发的时候，我们可以在Trae的阅览区中看到实时的效果
+
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.6.png)  
+
+### 7，Trae有时候需要审查文件
+这个时候我们通常需要点击“全部接受”项目才会继续下去
+
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.7.png)  
+
+### 8，大功告成！
+我们可以在阅览区看到Trae最后的杰作了，我们也可以在本地复制粘贴网址访问并测试效果
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.8.png)  
+
+### 9，Trae很完美的实现了我们想要实现的功能！
+做到这一步你也很棒！
+![操作展示](https://github.com/SuperSupeng/AI-Application-Development-for-Beginners/raw/main/assets/Part1.3.9.png)  
+
+## 小结
+Trae确实帮我们实现了无代码做出来一个应用，但是问题来了，我们在哪可以修改类似于“字体“颜色”的参数呢？在此留个悬念
